<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
  <shortcut android:shortcutId="search" android:enabled="true" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/shortcut_search" android:shortcutLongLabel="@string/shortcut_search">
    <intent android:action="android.intent.action.VIEW" android:targetPackage="space.avthsr.music" android:targetClass="space.avthsr.music.MainActivity" android:data="https://music.avthsr.space/search" />
  </shortcut>
  <shortcut android:shortcutId="library" android:enabled="true" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/shortcut_library" android:shortcutLongLabel="@string/shortcut_library">
    <intent android:action="android.intent.action.VIEW" android:targetPackage="space.avthsr.music" android:targetClass="space.avthsr.music.MainActivity" android:data="https://music.avthsr.space/library" />
  </shortcut>
  <shortcut android:shortcutId="downloads" android:enabled="true" android:icon="@mipmap/ic_launcher" android:shortcutShortLabel="@string/shortcut_downloads" android:shortcutLongLabel="@string/shortcut_downloads">
    <intent android:action="android.intent.action.VIEW" android:targetPackage="space.avthsr.music" android:targetClass="space.avthsr.music.MainActivity" android:data="https://music.avthsr.space/downloads" />
  </shortcut>
</shortcuts>
